# pypsa-canada

./: .buildinfo  .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  Snakefile  config.yaml  genindex.html  index.html  make.bat  objects.inv  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  search.html  searchindex.js
.azure-pipelines/: commitizen.yml  github_push.yml  validation.yml
.doctrees/: environment.pickle  index.doctree
.github/: dependabot.yml  github_docs.yml
.github/workflows/: github_docs.yml  link-check.yml  markdownlint.yml
docs/: Makefile
docs/source/: conf.py  index.rst
example/config/: Canada-National-no-CER-2021-2050.yaml  constraint_testing.yaml  default_config.yaml  minimal_model.yaml  test_config.yaml  tutorial_config.yaml
example/data/Canada-National/: loads.csv  storage_units-inflow.csv
example/data/components/: carrier_generic_data.csv  generator_generic_data.csv  storage_unit_generic_data.csv
example/data/constraints/: capacity_values_placeholder.csv  custom_constraints.csv
example/data/costs/Default_costs/: capital_costs.csv  fixed_o_m.csv  fuel_costs.csv  var_o_m.csv
example/data/costs/Default_costs-ITCs/: capital_costs.csv  fixed_o_m.csv  fuel_costs.csv  var_o_m.csv
example/data/costs/EMH-high_costs/: fuel_costs.csv  var_o_m.csv
example/data/costs/EMH-low_costs/: capital_costs.csv  fuel_costs.csv  var_o_m.csv
example/model/Canada-National/: buses.csv  generators.csv  links.csv  load_growth_median.csv  snapshots.csv  storage_units.csv
example/model/minimal_model/: buses.csv  generators-p_max_pu.csv  generators.csv  line_types.csv  lines.csv  links.csv  load_growth.csv  loads-p_set.csv  loads.csv  loads_forecast.csv  snapshots.csv  storage_units-inflow.csv  storage_units.csv  stores.csv
example/scenarios/: Canada-National-no-CER-2021-2050.yaml  Canada-National-no-CER-2021.yaml  Canada-National-no-CER.yaml  constraint_testing.yaml  minimal_model.yaml  tutorial_config.yaml
pypsa_canada/: __init__.py  deprecation.py
pypsa_canada/cli/: clean.py  dag.py  export_idea.py  postprocess_summary.py  pypsa_canada.py  workflow.py
pypsa_canada/workflow/: Snakefile
pypsa_canada/workflow/rules/: add_components.smk  add_extra_loads.smk  add_loads.smk  add_representative_days.smk  add_snapshots.smk  compare_results.smk  create_dispatch_network.smk  create_planning_network.smk  create_summary.smk  export_idea.smk  finalize.smk  load_network.smk  modify_components.smk  plot_corridor_map.smk  post_process_dispatch.smk  post_process_planning.smk  solve_dispatch.smk  solve_planning.smk
pypsa_canada/workflow/scripts/: Lines_Flow_On_Map_With_Transformers.py  _benchmarks.py  _helpers.py  add_components.py  add_extra_loads.py  add_loads.py  add_representative_days.py  add_snapshots.py  common.py  compare_results.py  create_dispatch_network.py  create_planning_network.py  create_summary.py  export_idea.py  helpers.py  load_load_forecast.py  load_network.py  load_profile.py  modify_components.py  plot_corridor_map.py  post_process_dispatch.py  post_process_planning.py  postprocess_helpers.py  solve_dispatch.py  solve_planning.py
scripts/: solve_planning.py
tests/: __init__.py  conftest.py  test_constraints.py  test_custom_constraint_hooks.py  test_validation.py
tests/data/constraints/: capacity_values_placeholder.csv  custom_constraints.csv
(+24 files in other folders)
