[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pypsa_canada"]

#[tool.setuptools.package-data]
#pypsa_canada = ["workflow/**"]

[project]
name = "pypsa_canada"
description="PyPSA Workflow for Canada models"
version = "0.2.22"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Michel Bui", email = "michel.bui@nrcan-rncan.gc.ca"},
    {name = "Serban Ivanescu", email = "serban.ivanescu@nrcan-rncan.gc.ca"},
    {name = "Adrien Prigent", email = "adrien.prigent@nrcan-rncan.gc.ca"},
    {name = "Nathan De Matos", email = "nathan.dematos@nrcan-rncan.gc.ca"},
    {name = "Sophie Pelland", email = "sophie.pelland@nrcan-rncan.gc.ca"},
    {name = "Steven Wong", email = "steven.wong@nrcan-rncan.gc.ca"},
    {name = "Matheus Zambroni De Souza", email = "matheus.zambronidesouza@nrcan-rncan.gc.ca"},
]
maintainers = []

classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "snakemake",
    "pypsa>=1.2.0",
    "fiona",
    "pint",
    "pytz",
    "scikit-learn",
    "scikit-learn-extra@git+https://github.com/TimotheeMathieu/scikit-learn-extra", #Fork of scikit learn extra with numpy v2 fix
    "folium",
    "memory_profiler",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.scripts]
pypsa_canada = "pypsa_canada.cli.pypsa_canada:cli"